# rust-market-data-processor

./: Cargo.toml  README.md
benches/: indicators_benchmark.rs  orderbook_benchmark.rs
scripts/: generate_benchmark_charts.py
src/: lib.rs  main.rs
src/indicators/: mod.rs
src/orderbook/: mod.rs
