[package]
name = "rust-market-data-processor"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "High-performance market data processor for real-time trading systems"
license = "MIT"
repository = "https://github.com/galafis/rust-market-data-processor"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "orderbook_benchmark"
harness = false

[[bench]]
name = "indicators_benchmark"
harness = false
